refactor: 一貫性の向上 (chair_handlers)
